Sign in modal responsive, footer z-index fixed

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,8 @@ footer{
   width: 100%;
   min-width: 100vw;
   padding: 12px 0px;
-  background-color:#242424
+  background-color:#242424;
+  z-index:10
 }
 
 footer:hover {
@@ -67,8 +68,9 @@ footer:hover {
 
 /* Navbar fade-in */
 nav {
-  position: relative;
+  position: fixed;
   z-index: 10;
+  top: 0;
   opacity: 0;
   animation: fadeIn 1s ease-out forwards;
   animation-delay: 0.5s; /* Smooth delay to start after page load */
@@ -255,7 +257,10 @@ nav {
 
 .modal-container {
   display: flex;
-  width: 70vw;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
   max-width: 800px; /* Max width of the modal */
   background-color: white;
   border-radius: 10px;
@@ -263,6 +268,8 @@ nav {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 1.5rem; /* Padding around the container */
   position: relative;
+  gap: 1rem;
+  max-height:90%
 }
 
 .close-button{
@@ -314,7 +321,7 @@ nav {
 .who-you {
   width: 100%; /* 1/4 width of the modal */
   /* height: 50%; */
-  object-fit: cover; /* Maintain aspect ratio */
+  object-fit: cover;
 }
 
 .who-you-wrapper {
@@ -323,7 +330,7 @@ nav {
   justify-content: center;
   align-items: center;
   width: 35%;
-  height: 100vh;
+  /* height: 100vh; */
   object-fit: cover;
 }
 
@@ -346,16 +353,18 @@ nav {
 
 /* Right form section */
 form {
-  padding: 2rem;
-  width: 75%; /* 3/4 width of the modal */
+  /* padding: 2rem; */
+  width: 100%; /* 3/4 width of the modal */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 1rem;
+  /* justify-content: center; */
 }
 
 form h2 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .form-group {
@@ -370,6 +379,7 @@ form h2 {
 }
 
 .form-group input {
+  width: 100%;
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -396,6 +406,9 @@ button:hover {
 
 
 /* CSS for the Shop Component */
+.shop-content {
+  margin-top: 60px;
+}
 
 .item-grid {
   display: grid;
